# eebos

./: .gitignore  Cargo.toml  Makefile  bochsrc  cbindgen.toml  debug  debug2.txt  gdt.c  gdt.h  irq.nasm  kernel.c  linker.ld  makefile.deps  mouse.c  mouse.h  pic  pic.c  ports.h  start_process  stdutils.c  stdutils.h  test  test.s  test_mod  trunc.py
.cargo/: config.toml
core64/: Cargo.toml  err  target.json  test.rlib
core64/src/: elf.rs  lib.rs  process.rs  screen.rs  syscall.rs
isodir/boot/grub/: grub.cfg
modules/dyshared/: Cargo.toml
modules/dyshared/src/: lib.rs  ports.rs
modules/paging/: Cargo.toml
modules/paging/src/: lib.rs  page32.rs
modules/pic/: Cargo.toml
modules/pic/src/: main.rs
modules/start_process/: Cargo.toml
modules/start_process/src/: main.rs
modules/test_dep/: Cargo.toml
modules/test_dep/src/: lib.rs
modules/test_mod/: Cargo.toml
modules/test_mod/src/: lib.rs  main.rs
ps2/: controller.h  keyboard.h  mouse.h
shared/: Cargo.toml
shared/src/: api.rs  cpuinfo.rs  lib.rs  process.rs  screen.rs  std.rs
src/: boot.s  gdt.c  gdt.h  irq.nasm  kernel.c  page64.c  page64.h  pic.h  pic_h.rs  ports.c  ports.h  ports_h.rs  sse.c  sse.h  stdutils.c  stdutils.h  stdutils_h.rs  test64.nasm
src/ps2/: control.rs  control_rs.h  controller.c  controller.h  keyboard.c  keyboard.h  mouse.c  mouse.h
syscall_std/: Cargo.toml
syscall_std/src/: lib.rs
